--- a/lib/views/index.erb
+++ b/lib/views/index.erb
@@ -1,7 +1,10 @@
-
-<h1> Hi there <%= ["Amigo", "Oscar", "Viking"].sample %> </h1>
-
-
-<div class='cat_container'>
-  <img src='http://bit.ly/1eze8aE' style='border: red dotted 3px'>
+<% if @name %>
+<h1>My name is <%= @name %></h1>
+<% end %>
+<form action="/named-cat">
+  <input type="text" name="name">
+  <input type="submit" value="Submit">
+</form>
+<div >
+  <img src='http://bit.ly/1eze8aE' style='border: 3px dashed red'>
 </div>
