Add attack link so player 1 can attack

--- a/battle/views/play.erb
+++ b/battle/views/play.erb
@@ -1,1 +1,6 @@
 <%= @player_1_name %> vs. <%= @player_2_name %>
+
+<div class="player_1"> <%= @player_1_name %>: 60HP <a href="/attack">Attack</a> </div>
+
+<div class="player_1"> <%= @player_2_name %>: 60HP </div>
+
