--- a/battle/views/play.erb
+++ b/battle/views/play.erb
@@ -2,5 +2,5 @@
 
 <div class="player_1"> <%= @player_1_name %>: 60HP <a href="/attack">Attack</a> </div>
 
-<div class="player_1"> <%= @player_2_name %>: 60HP </div>
+<div class="player_2"> <%= @player_2_name %>: 60HP <a href="/attack">Attack</a> </div> 
 
